# job-verify

./: .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml  server.json
src/jobverify_mcp/: __init__.py  common.py  config.py  server.py
src/jobverify_mcp/collectors/: __init__.py  address.py  archived.py  asn.py  blocklists.py  certtrans.py  company.py  crypto.py  domain.py  domain_auth.py  email.py  email_footprint.py  email_headers.py  entities.py  github_org.py  ip.py  lookalike.py  news.py  phone.py  scam_patterns.py  typosquat.py  url_check.py  username.py  wayback.py
