[project]
name = "jobverify-mcp"
version = "0.1.0"
description = "Agentic MCP server for detecting fake LinkedIn recruiter / job-offer scams using free OSINT sources"
authors = [{ name = "yessGlory17", email = "yessGlory17@users.noreply.github.com" }]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.2.0",
    "httpx>=0.27.0",
    "pydantic>=2.6.0",
    "phonenumbers>=8.13.0",
    "dnspython>=2.6.0",
]

[project.urls]
Homepage = "https://github.com/yessGlory17/job-verify"
Repository = "https://github.com/yessGlory17/job-verify"
Issues = "https://github.com/yessGlory17/job-verify/issues"

[project.scripts]
jobverify-mcp = "jobverify_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/jobverify_mcp"]
